Update to new xepersian

--- a/backmatters.tex
+++ b/backmatters.tex
@@ -1,8 +1,10 @@
 {\small
 {\baselineskip=.75cm
-\include{dicfa2en}
-\clearpage{\pagestyle{empty}\cleardoublepage}
-\include{dicen2fa}}
+%\include{dicfa2en}
+%\clearpage{\pagestyle{empty}\cleardoublepage}
+%\include{dicen2fa}
+\printglossary
+}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 {\baselineskip=.6cm
 %\phantomsection
