--- a/commands.tex
+++ b/commands.tex
@@ -27,6 +27,7 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 % چنانچه قصد پرینت گرفتن نوشته خود را دارید، خط بالا را غیرفعال و  از دستور زیر استفاده کنید چون در صورت استفاده از دستور زیر‌‌، 
 % لینک‌ها به رنگ سیاه ظاهر خواهند شد که برای پرینت گرفتن، مناسب‌تر است
 %\usepackage[pagebackref=false]{hyperref}
+\usepackage[xindy,nonumberlist=true,nomain]{glossaries}
 %بسته‌ی لازم برای مراجع
 \usepackage[nonamebreak,square,numbers]{natbib}
 % بسته‌ لازم برای تنظیم سربرگ‌ها
@@ -88,9 +89,11 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\جستار}[1] {\cite{#1}}
 \newcommand{\ارجا}[1]{\ref{#1}}
-\renewcommand{\درشت}[1]{\textbf{#1}}
+\newcommand{\درشت}[1]{\textbf{#1}}
 \newcommand{\خمیده}[1]{\textit{#1}}
-\newcommand{\سه‌نقطه}{\ldots}
+\newcommand{\فقره}{\item}
+\newcommand{\متنلاتین}[1]{\lr{#1}}
+\newcommand{\پانوشت}[1]{\footnote{#1}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\گراف}[1]{$#1 = (V,E)$}
 \newcommand{\graph}[3]{\ensuremath{#1 = (#2,#3)}}
@@ -225,3 +228,82 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 \vskip 120\p@
 }}
 \makeatother
+
+%% تعریف استایل برای واژه نامه فارسی به انگلیسی،
+\newglossarystyle{myFaToEn}{%
+	\renewenvironment{theglossary}{}{}
+	\renewcommand*{\glsgroupskip}{\vskip 10mm}
+	\renewcommand*{\glsgroupheading}[1]{\subsection*{\glsgetgrouptitle{##1}}}
+	\renewcommand*{\glossentry}[2]{
+	  \noindent\glsentryname{##1}\dotfill\space \glsentrytext{##1}
+	}
+}
+
+\newglossarystyle{myEntoFa}{%
+	\renewenvironment{theglossary}{}{}
+	\renewcommand*{\glsgroupskip}{\vskip 10mm}
+	\renewcommand*{\glsgroupheading}[1]{
+	  \begin{LTR}
+	  \subsection*{\glsgetgrouptitle{##1}}
+	  \end{LTR}
+	}
+	\renewcommand*{\glossentry}[2]{
+	  \noindent\glsentrytext{##1}\dotfill\space \glsentryname{##1}
+	}
+}
+
+\newglossary[glg]{english}{gls}{glo}{واژه‌نامه انگلیسی به فارسی}
+\newglossary[blg]{persian}{bls}{blo}{واژه‌نامه فارسی به انگلیسی}
+\GlsSetXdyLanguage[persian]{persian-variant1}
+\GlsSetXdyLanguage[english]{english}
+\glsdisablehyper
+\makeglossaries
+
+\let\oldgls\gls
+\let\oldglspl\glspl
+
+\makeatletter
+\renewrobustcmd*{\gls}{\@ifstar\@msgls\@mgls}
+\newcommand*{\@mgls}[1] {\ifthenelse{\equal{\glsentrytype{#1}}{english}}{\oldgls{#1}\glsuseri{f-#1}}{\oldgls{#1}}}
+\newcommand*{\@msgls}[1]{\ifthenelse{\equal{\glsentrytype{#1}}{english}}{\glstext{#1}\glsuseri{f-#1}}{\oldgls{#1}}}
+
+\renewrobustcmd*{\glspl}{\@ifstar\@msglspl\@mglspl}
+\newcommand*{\@mglspl}[1] {\ifthenelse{\equal{\glsentrytype{#1}}{english}}{\oldglspl{#1}\glsuseri{f-#1}}{\oldglspl{#1}}}
+\newcommand*{\@msglspl}[1]{\ifthenelse{\equal{\glsentrytype{#1}}{english}}{\glsplural{#1}\glsuseri{f-#1}}{\oldglspl{#1}}}
+\makeatother
+
+\newcommand{\renewglossaryentry}[1]{%
+  \ifglsentryexists{#1}
+   {\global\csundef{glo@#1@name}}
+   {}
+   \newglossaryentry{#1}
+}
+
+\newcommand{\newword}[4]{
+	\renewglossaryentry{#1}     {type={english},name={\lr{#2}},plural={#4},text={#3},description={}}
+	\renewglossaryentry{f-#1} {type={persian},name={#3},text={\lr{#2}},description={}}
+}
+
+\newcommand{\واژه}[2]{
+  \newword{#2}{#2}{#1}{}
+  \gls{#2}
+}
+
+\let\Oldprintglossary\printglossary
+\renewcommand{\printglossary}{
+	\let\appendix\relax
+
+	\clearpage
+	%\phantomsection
+
+	\addcontentsline{toc}{chapter}{واژه نامه انگلیسی به فارسی}
+	\setglossarystyle{myEntoFa}
+	\Oldprintglossary[type=english]
+	
+	\clearpage
+	%\phantomsection
+
+	\addcontentsline{toc}{chapter}{واژه نامه فارسی به انگلیسی}
+	\setglossarystyle{myFaToEn}
+	\Oldprintglossary[type=persian]
+}%
