--- a/preface.tex
+++ b/preface.tex
@@ -1,10 +1,10 @@
 \chapter*{پیش‌گفتار}
 \markboth{پیش‌گفتار}{پیش‌گفتار}
 
-در سال‌های اخیر، «داده» و نحوه پردازش آن بحث اصلی شرکت‌ها و مراکز علمی بوده‌است زیرا تکنولوژی جدید، حجم انبوهی از داده‌ها را تولید کرده که استخراج دانش از آن‌ها سا‌ده نیست. دلیل این پیچیدگی، حجم داده، ارتباط تنگاتنگ داده‌ها با یکدیگر و نبود الگوریتم‌های سریع برای کار با آن‌هاست. در این بین، کار با داده‌هایی که به شکل گراف مدل می‌شوند از همه پیچیده‌تر است زیرا بسیاری از عمل‌ها نظیر مقایسه که در ساختار‌های دیگر به راحتی انجام می‌شود، در گراف یا قابل انجام نیست و یا پیچیدگی زیادی دارد. با این وجود نمی‌توان از گراف‌ها به سادگی عبور کرد. این ساختارِ انعطاف‌پذیر، قابلیت مدل کردن بسیاری از داده‌های پیچیده را داراست و در علوم مختلف کاربرد دارد.
+در سال‌های اخیر، «داده» و نحوه پردازش آن بحث اصلی شرکت‌ها و مراکز علمی بوده‌است زیرا تکنولوژی جدید، حجم انبوهی از داده‌ها را تولید کرده که استخراج دانش از آن‌ها سا‌ده نیست. دلیل این پیچیدگی، حجم داده، ارتباط تنگاتنگ داده‌ها با یکدیگر و عدم وجود الگوریتم‌های سریع برای کار با آن‌هاست. در این بین، کار با داده‌هایی که به شکل گراف مدل می‌شوند از همه پیچیده‌تر است زیرا بسیاری از عمل‌ها نظیر مقایسه که در ساختار‌های دیگر به راحتی انجام می‌شود، در گراف یا قابل انجام نیست و یا پیچیدگی زیادی دارد. با این وجود نمی‌توان از گراف‌ها به سادگی عبور کرد. این ساختارِ انعطاف‌پذیر، قابلیت مدل کردن بسیاری از داده‌های پیچیده را داراست و در علوم مختلف کاربرد دارد.
 
 از طرف دیگر، اکثر تکنیک‌های قوی در یادگیری ماشین با داده‌های برداری کار می‌کنند و نمی‌توان در آن‌ها، مستقیماً از گراف‌ استفاده کرد. به همین دلیل، بیشتر سعی بر آن است که گراف‌ها را در قالب بردارهای ویژگی نمایش داد. خلاصه کردن گراف در قالب یک بردار کار ساده‌ای نیست و معمولاً به از دست رفتن داده منجر می‌شود. بنابراین باید به نحوی اینکار را انجام داد که کمترین هدرفت داده را داشته باشیم.
 
 \خمیده{گرافلت‌} مفهومی است که در چند سال اخیر برای مقایسه شبکه‌ها و گراف‌ها مورد استفاده قرار گرفته و توانایی خود برای خلاصه‌سازی گراف را اثبات کرده‌است. از گرافلت‌ها در تعریف تابع کرنل استفاده شده که البته به دلیل سرعت اجرای بسیار پایین، استفاده از آن غیر ممکن است. در این پایان‌نامه می‌خواهیم با تعریف گرافلت کرنل گاوسی، مشکلات قبلی استفاده از گرافلت در تعریف یک تابع کرنل را رفع کنیم. همچنین از این تابع کرنل، برای پیش‌بینی عملکرد پروتئین استفاده می‌کنیم و نشان می‌دهیم که این کرنل، چه از نظر سرعت و چه از نظر دقت، از کرنل‌های مشابه بهتر عمل می‌کند. سپس از آن در مسئله \خمیده{تکمیل شبکه} روی شبکه‌های تعاملات پروتئین استفاده می‌کنیم.
 
-هدف از مسئله تکمیل شبکه، پیش‌بینی قسمت‌های دیده نشده از یک شبکه (\متن‌لاتین{false negatives}) و همچنین تصحیح قسمت‌های اشتباه آن (\متن‌لاتین{false positives}) است. به دلیل خطا در روش‌های آزمایشگاهی، شبکه‌های تعاملات پروتئین موجود اشتباهات زیادی در حدود ۳۵ تا ۷۰ درصد دارند. یک راه حل برای تشخیص اشتباهات و پیش‌بینی تعاملات دیده نشده، استفاده از روش \خمیده{گسترش شبکه} است. به این ترتیب که ابتدا یک قسمت از شبکه با درصد اطمینان بالا را انتخاب می‌کنیم و مدل ریاضی آن را می‌سازیم. سپس مابقی شبکه را طبق مدل تشخیصی بازسازی می‌کنیم.
+هدف از مسئله تکمیل شبکه، پیش‌بینی قسمت‌های دیده نشده از یک شبکه (\متنلاتین{false negatives}) و همچنین تصحیح قسمت‌های اشتباه آن (\متنلاتین{false positives}) است. به دلیل خطا در روش‌های آزمایشگاهی، شبکه‌های تعاملات پروتئین موجود اشتباهات زیادی در حدود ۳۵ تا ۷۰ درصد دارند. یک راه حل برای تشخیص اشتباهات و پیش‌بینی تعاملات دیده نشده، استفاده از روش \خمیده{گسترش شبکه} است. به این ترتیب که ابتدا یک قسمت از شبکه با درصد اطمینان بالا را انتخاب می‌کنیم و مدل ریاضی آن را می‌سازیم. سپس مابقی شبکه را طبق مدل تشخیصی بازسازی می‌کنیم.
