--- a/introduction.tex
+++ b/introduction.tex
@@ -5,15 +5,15 @@
 
 امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده‌ها\پانوشت{data} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم برای استنتاج قواعد کلی از یک سری داده‌ی مشاهده شده، موضوع اصلی یادگیری ماشین است.
 
-داده یک مفهوم قراردادی و وابسته به دامنه\پانوشت{domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا برداری\پانوشت{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که عناصر این بردار نمایش‌دهنده میزان تکرار کلمات از پیش تعیین شده در آن متن است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
+داده یک مفهوم قراردادی و وابسته به \واژه{دامنه}{Domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا \واژه{برداری}{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که عناصر این بردار نمایش‌دهنده میزان تکرار کلمات از پیش تعیین شده در آن متن است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
 
-گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه گره‌\پانوشت{node} و یک مجموعه یال‌\پانوشت{edge} که ارتباط بین گره‌ها را معین می‌کند، تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده‌ی ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده‌ی عناصر سازنده آن موجودیت هستند.
+گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه \واژه{گره‌}{Node} و یک مجموعه \واژه{یال‌}{Edge} که ارتباط بین گره‌ها را معین می‌کند، تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده‌ی ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده‌ی عناصر سازنده آن موجودیت هستند.
 
 به دلیل همین انعطاف‌پذیری، گراف در بسیاری از رشته‌ها مورد توجه قرار گرفته است و بسیاری از انواع داده با گراف مدل می‌شوند. در زیر به کاربرد گراف در دو رشته که با موضوع پایان‌نامه پیشرو مرتبط است، اشاره می‌کنیم.
 
-\درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی‌ که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی‌ای مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در شیمی محاسباتی\پانوشت{chemoinformatics} است.
+\درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی‌ که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی‌ای مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در \واژه{شیمی محاسباتی}{chemoinformatics} است.
 
-\درشت{بیوانفورماتیک}\پانوشت{bioinformatics} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌\پانوشت{\متنلاتین{protein structure}}، هم‌بیانی\پانوشت{co-expression} پروتئین‌ها یا ژن‌ها، تعاملات پروتئین-پروتئین\پانوشت{\متنلاتین{protein-protein interactions}}، شبکه‌های تنظیمی\پانوشت{\متنلاتین{regulatory networks}} و شبکه‌های متابولیک\پانوشت{\متنلاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی رُخ‌نمود\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
+\درشت{\واژه{بیوانفورماتیک}{bioinformatics}} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌\پانوشت{\متنلاتین{protein structure}}، هم‌بیانی\پانوشت{co-expression} پروتئین‌ها یا ژن‌ها، تعاملات پروتئین-پروتئین\پانوشت{\متنلاتین{protein-protein interactions}}، شبکه‌های تنظیمی\پانوشت{\متنلاتین{regulatory networks}} و شبکه‌های متابولیک\پانوشت{\متنلاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی رُخ‌نمود\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
 
 علاوه بر این رشته‌ها، گراف‌ها در تحلیل شبکه‌های اجتماعی\جستار{Carrington_2005}، پردازش تصویر\جستار{Lezoray_2012} و تحلیل شبکه‌ جهانی وب مورد استفاده گسترده قرار می‌گیرند.
 
