--- a/introduction.tex
+++ b/introduction.tex
@@ -13,7 +13,7 @@
 
 \درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی‌ که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی‌ای مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در \واژه{شیمی محاسباتی}{chemoinformatics} است.
 
-\درشت{\واژه{بیوانفورماتیک}{bioinformatics}} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌\پانوشت{\متنلاتین{protein structure}}، هم‌بیانی\پانوشت{co-expression} پروتئین‌ها یا ژن‌ها، تعاملات پروتئین-پروتئین\پانوشت{\متنلاتین{protein-protein interactions}}، شبکه‌های تنظیمی\پانوشت{\متنلاتین{regulatory networks}} و شبکه‌های متابولیک\پانوشت{\متنلاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی رُخ‌نمود\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
+\درشت{\واژه{بیوانفورماتیک}{bioinformatics}} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر \واژه{ساختار پروتئین‌}{protein structure}، \واژه{هم‌بیانی}{co-expression} پروتئین‌ها یا ژن‌ها، \واژه{تعاملات پروتئین-پروتئین}{protein-protein interactions}، \واژه{شبکه‌های تنظیمی}{شبکه تنظیمی}{Regulatory Networks}{Regulatory Network} و شبکه‌های متابولیک\پانوشت{\متنلاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی رُخ‌نمود\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
 
 علاوه بر این رشته‌ها، گراف‌ها در تحلیل شبکه‌های اجتماعی\جستار{Carrington_2005}، پردازش تصویر\جستار{Lezoray_2012} و تحلیل شبکه‌ جهانی وب مورد استفاده گسترده قرار می‌گیرند.
 
