--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,11 @@
 \frontmatter
 \input{frontmatters}
 \input{preface}
+\clearpage{\pagestyle{empty}\cleardoublepage}
 \tableofcontents
-%\listoffigures
+\clearpage{\pagestyle{empty}\cleardoublepage}
+\listoffigures
+\listoftables
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \mainmatter
 \input{introduction}
